# psql-diesel-sample

./: .env  .gitignore  Cargo.toml  README.md  docker-compose.yml
lib/: Cargo.toml
src/: main.rs
